@@ -1,5 +1,7 @@
 == 2.9.4 ==
 Release date: August 13, 2025
+* Enhancement: Pricing Table - Added Table style options
+* Enhancement: Pricing Table - Added fraction style option
 * Security Fix
 
 == 2.9.3 ==
